--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>For You</title>
+    <title>I Got a Plant For You</title>
   </head>
   <body>
     <div id="app"></div>
