--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>I Got a Plant For You</title>
+    <meta name="description" content="A simple reminder to help you have a more pleasant day">
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+    <link rel="mask-icon" href="/mask-icon.svg" color="#fe4c5d">
+    <meta name="theme-color" content="#fe4c5d">
   </head>
   <body>
     <div id="app"></div>
